# ai-chatbot-platform

./: .editorconfig  .gitignore  README.md  TESTING_GUIDE.md  deploy.sh  docker-compose.yml  env.example  github-actions-testing-guide.md  netlify.toml  qa_automated_tests.py  qa_bug_tracker.md  qa_test_plan.md  setup-github-secrets.md  setup.sh  test_project.ps1
.cursor/rules/: qa-test.mdc
.github/workflows/: ci-cd.yml  deploy.yml  test-app.yml
backend/: Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: admin.py  auth.py  chat.py  documents.py  users.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: __init__.py  conversation.py  document.py  feedback.py  user.py
backend/app/services/: rag_service.py
frontend/: Dockerfile  netlify.toml  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/components/Layout/: Layout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/Admin/: AdminDashboard.tsx  DocumentManagement.tsx  UserManagement.tsx
frontend/src/pages/Auth/: Login.tsx  Register.tsx
frontend/src/pages/Customer/: CustomerChat.tsx
frontend/src/pages/FieldEngineer/: FieldEngineerChat.tsx
frontend/src/pages/Profile/: Profile.tsx
frontend/src/services/: api.ts
